# advent-of-code-2021

./: CMakeLists.txt
day01/: sonarSweep.cpp
day02/: submarineMotion.cpp
